
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef int stInput ;
typedef int WORD ;
struct TYPE_4__ {int dwFlags; int wVk; } ;
struct TYPE_5__ {TYPE_1__ ki; int type; int member_0; } ;
typedef TYPE_2__ INPUT ;


 scalar_t__ FALSE ;
 int INPUT_KEYBOARD ;
 int KEYEVENTF_KEYUP ;
 int SendInput (int,TYPE_2__*,int) ;

int _sim_key_up(WORD wKey)
 {
  INPUT stInput = {0};

  do
  {
   stInput.type = INPUT_KEYBOARD;
   stInput.ki.wVk = wKey;
   stInput.ki.dwFlags = KEYEVENTF_KEYUP;

   SendInput(1 , &stInput , sizeof(stInput) );

  } while (FALSE);

  return 0;
}
